# armour

./: .dockerignore  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE.md  README.md  SETUP.md  SETUP.org  TODO.md  docker-compose.yml
PoC/: clonePoC.sh  docker-compose.yml
armour/: proposal.bib  proposal.tex
benchmark/: README.md
capnp-test/: Cargo.toml  oracle.capnp  oracle_server.py
design/: Armour-design.key  architecture.org  proposal.armour
docs/: CP.md  README.md  future_work.md  language.md
draft/: SETUP.org  dockerfile-proxy
examples/: Dockerfile  README.md  Vagrantfile  armour-compose.yml  control-plane.md  data-plane.md  (+6 more)
proto/arm-policy/: Cargo.toml  external.capnp
proto/arm-policy/src/: externals.rs  headers.rs  interpret.rs  lang.rs  lexer.rs  lib.rs  literals.rs  main.rs  parser.rs  policy.rs  types.rs
proto/arm-pubsub/: Cargo.toml
proto/arm-pubsub/src/: main.rs
rust/arm-policy/: Cargo.toml  README.md  external.capnp
rust/arm-policy/src/: externals.rs  headers.rs  interpret.rs  lang.rs  lexer.rs  lib.rs  literals.rs  main.rs  parser.rs  types.rs
rust/arm-service/: Cargo.toml
rust/arm-service/src/: main.rs
rust/armour-data/: Cargo.toml  test.policy
rust/armour-data-interface/: Cargo.toml
rust/armour-data-interface/src/: lib.rs
rust/armour-data-master/: Cargo.toml  armour-data  script  test.policy
rust/armour-data-master/src/: commands.rs  lib.rs  main.rs
rust/armour-data/src/: dns.rs  http_proxy.rs  lib.rs  main.rs  policy.rs  proxy.rs  tcp_proxy.rs
rust/armour/armour-data-interface/: Cargo.toml
rust/armour/armour-data-interface/src/: codec.rs  lib.rs  policy.rs
rust/armour/armour-data-master/: Cargo.toml  test.policy
rust/armour/armour-data-master/src/: commands.rs  lib.rs  main.rs
rust/armour/armour-policy/: Cargo.toml  README.md  armour-policy.txt  build.rs  working_poc.policy
rust/armour/armour-policy/src/: expressions.rs  externals.rs  headers.rs  interpret.rs  lang.rs  lexer.rs  lib.rs  literals.rs  main.rs  parser.rs  pretty.rs  types.rs
rust/armour/armour-policy/test-policies/: flow_conf.policy  flow_integrity.policy  small_test.policy  working_poc.policy  working_poc_v2.policy
rust/experimental/actix-capnp/: Cargo.toml  external.capnp
rust/experimental/actix-capnp/src/: main.rs
rust/experimental/armour-ctl/: Cargo.toml
rust/experimental/armour-ctl/src/: main.rs
rust/experimental/armour-fake-master/: Cargo.toml
rust/experimental/armour-fake-master/src/: main.rs
rust/experimental/ctrl-plane/: Cargo.toml  documentation.org
rust/experimental/ctrl-plane/src/: data_model.rs  diagram.uml  lib.rs  main.rs  restapi.rs
rust/external-server/: Cargo.toml
rust/external-server/src/: lib.rs
rust/external-server/src/certificates/: .gitignore
rust/policy-services/logger/: Cargo.toml
rust/policy-services/logger/src/: connections.rs  dotgraph.rs  graph.rs  lib.rs  main.rs  web.rs
rust/policy-services/policy-service/: Cargo.toml  external.capnp
rust/policy-services/policy-service/src/: lib.rs  rpc.rs
rust/testing/arm-service/: Cargo.toml
rust/testing/arm-service/src/: main.rs
src/: Cargo.toml  Cross.toml  README.md
src/armour-api/: Cargo.toml
src/armour-api/src/: control.rs  host.rs  lib.rs  master.rs  proxy.rs
src/armour-certs/: Cargo.toml
src/armour-certs/src/: main.rs
src/armour-compose/: Cargo.toml
src/armour-compose/src/: capabilities.rs  config.rs  lib.rs  network.rs  service.rs  volume.rs
src/armour-control/: Cargo.toml
src/armour-control/resources/: cli.yml  default-onboarding.policy
src/armour-control/src/: interpret.rs  lib.rs  main.rs  policy.rs  rest_api.rs  specialize.rs
src/armour-control/tests/: integration_test.rs
src/armour-control/tests/policies/: global-id.policy  global1.policy  global2.policy  onboard1.policy  onboard2.policy
src/armour-ctl/: Cargo.toml
src/armour-ctl/resources/: cli.yml
src/armour-ctl/src/: main.rs
src/armour-host/: .gitignore  Cargo.toml
src/armour-host/src/: commands.rs  host.rs  instance.rs  lib.rs  main.rs  rest_api.rs
src/armour-lang/: Cargo.toml  build.rs
src/armour-lang/src/: expressions.rs  expressions_cp.rs  externals.rs  headers.rs  interpret.rs  labels.rs  lang.rs  lang_cp.rs  lexer.rs  lexer_cp.rs  lib.rs  literals.rs  main.rs  meta.rs  parser.rs  policies.rs  policies_cp.rs  pretty.rs  simplify.rs  specialize.rs  types.rs  types_cp.rs
src/armour-lang/tests/: integration_test.rs
src/armour-lang/tests/policies/: pol1.policy  pol2.policy
src/armour-launch/: Cargo.toml  armour-compose.yml  docker-compose.yml  test.yml
src/armour-launch/src/: lib.rs  main.rs
src/armour-master/: Cargo.toml
src/armour-master/src/: commands.rs  instance.rs  lib.rs  main.rs  master.rs  rest_api.rs
src/armour-proxy/: Cargo.toml
src/armour-proxy/src/: http_policy.rs  http_proxy.rs  lib.rs  main.rs  policy.rs  tcp_codec.rs  tcp_policy.rs  tcp_proxy.rs
src/armour-serde/src/: lib.rs
src/armour-utils/: Cargo.toml
src/armour-utils/src/: lib.rs
src/docker-api/: Cargo.toml
src/docker-api/src/: lib.rs  rep.rs
src/docs/: control.http  host.http  master.http
src/experimental/actix-iptables-daemon/actix-iptables-client/: Cargo.toml
src/experimental/actix-iptables-daemon/actix-iptables-client/src/: main.rs
src/experimental/actix-iptables-daemon/actix-iptables-lib/src/: lib.rs
src/experimental/actix-iptables-daemon/actix-iptables-server/: Cargo.toml
src/experimental/actix-iptables-daemon/actix-iptables-server/src/: main.rs
src/experimental/docker-query/: README.md  engine.policy  engine.py
src/policies/: all.policy  hello.policy  label.policy  req.policy  test.policy  test.script
src/tools/arm-service/: Cargo.toml
src/tools/arm-service/src/: main.rs
src/tools/dot-rust/src/: lib.rs
src/tools/hyper-server/: Cargo.toml
src/tools/hyper-server/src/: main.rs
src/tools/logger/: .gitignore  Cargo.toml
src/tools/logger/src/: connections.rs  dotgraph.rs  graph.rs  lib.rs  main.rs  web.rs
src/tools/policy-service/: Cargo.toml  build.rs  external.capnp
src/tools/policy-service/src/: lib.rs  rpc.rs
(+1103 files in other folders)
