[workspace]

members = [
    "armour-api",
    "armour-compose",
    "armour-utils",
    "armour-launch",
    "armour-lang",
    "armour-proxy",
    "armour-host",
    "armour-control",
    "armour-serde",
    "armour-ctl",
    "docker-api",
    "tools/logger",
    "tools/arm-service"
]

[profile.release]
opt-level = 's'
lto = true
