[package]
name = "arm-policy"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.9.5"

[dependencies]
regex = "1"
lazy_static = "1.3.0"
nom = "4.2.3"
nom_locate = "0.3"
clap = "2.33.0"
petgraph = "0.4.13"
capnp = "0.9.5"
capnp-rpc = "0.9.0"
futures = "0.1"
tokio = "0.1"
url = "1.7.2"