[package]
name = "arm-policy"
version = "0.1.1"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.10"

[dependencies]
regex = "1.1"
lazy_static = "1.3"
nom = "4.2"
nom_locate = "0.3"
clap = "2.33"
petgraph = "0.4"
capnp = "0.10"
capnp-rpc = "0.10"
futures = "0.1"
futures-timer = "0.1"
actix = "0.8"
tokio = "0.1"
tokio-uds = "0.2"
url = "1.7"
base64 = "0.10"
serde = { version = "1.0",  features = ["derive"] }
serde_regex = "0.4"
enum-display-derive = "0.1"
trust-dns-resolver = "0.11"

[target.'cfg(not(target_env = "musl"))'.dependencies]
tokio-tls = "0.2"
native-tls = "0.2"
