[package]
name = "arm-policy"
version = "0.1.1"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.10"

[dependencies]
actix = "0.8"
base64 = "0.10"
capnp = "0.10"
capnp-rpc = "0.10"
clap = "2.33"
enum-display-derive = "0.1"
futures = "0.1"
futures-timer = "0.1"
lazy_static = "1.3"
log = "0.4"
nom = "5.0"
nom5_locate = "0.1"
petgraph = "0.4"
regex = "1.2"
serde = { version = "1.0",  features = ["derive"] }
serde_regex = "0.4"
tokio = "0.1"
tokio-uds = "0.2"
trust-dns-resolver = "0.11"
url = "2.0"

[target.'cfg(not(target_env = "musl"))'.dependencies]
tokio-tls = "0.2"
native-tls = "0.2"
