[package]
name = "armour-data-interface"
version = "0.1.4"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
arm-policy = { path = "../arm-policy" }

actix = "0.8"
bincode = "1.1"
byteorder = "1.3"
bytes = "0.4"
get_if_addrs = "0.5.3"
lazy_static = "1.3"
serde = { version = "1.0",  features = ["derive"] }
tokio-io = "0.1"
