[package]
name = "armour-data-master"
version = "0.1.4"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
arm-policy = { path = "../arm-policy" }
armour-data-interface = { path = "../armour-data-interface" }

actix = "0.8"
clap = "2.33"
env_logger = "0.6"
futures = "0.1"
lazy_static = "1.3"
log = "0.4"
regex = "1.2"
rustyline = "5.0"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
tokio-uds = "0.2"
trust-dns-resolver = "0.11"
url = "2.0"
