[package]
name = "armour-data"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
arm-policy = { path = "../arm-policy" }
armour-data-interface = { path = "../armour-data-interface" }

actix = "0.8"
actix-web = {version = "1.0", features = ["client", "ssl"]}
bytes = "0.4"
clap = "2.33"
env_logger = "0.6"
futures = "0.1"
http = "0.1"
lazy_static = "1.3"
log = "0.4"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
tokio-uds = "0.2"
tokio-tcp = "0.1"
url = "1.7"
