[package]
name = "external-server"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.10"

[dependencies]
capnp = "0.10"
capnp-rpc = "0.10"
futures = "0.1"
tokio = "0.1"
tokio-uds = "0.2"

#[target.'cfg(not(target_env = "musl"))'.dependencies]
tokio-tls = "0.2"
native-tls = "0.2"
