[package]
name = "armour-api"
version = "0.3.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
armour-lang = { path = "../armour-lang" }
armour-serde = { path = "../armour-serde" }

actix = "0.10"
bincode = "1.3"
bson = "1.1"
byteorder = "1.3"
bytes = "0.5"
http = "0.2"
regex = "1.3"
serde = { version = "1.0",  features = ["derive"] }
tokio-util = { version = "0.3", features = ["codec"] }
url = { version = "2.1", features = ["serde"]}