[package]
name = "armour-certs"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
openssl = { version = "0.10", features = ["vendored"] }
rpassword = "5.0"