[package]
name = "armour-compose"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
armour-api = { path = "../armour-api" }
armour-lang = { path = "../armour-lang" }
armour-serde = { path = "../armour-serde" }

serde = { version = "1.0",  features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
ipnet = { version = "2.3", features = ["serde"] }
lazy_static = "1.4"
clap = "2.33"