[package]
name = "armour-ctl"
version = "0.1.0"
authors = ["guspet02 <gpetri@irif.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armour-lang = {path = "../armour-lang"}
armour-api = {path = "../armour-api"}

actix = "0.9"
actix-rt = "1.1"
actix-web = "2.0"
awc = "1.0"
bytes = "0.5"
clap = {version = "2.33", features = ["yaml"]}
futures = "0.3"
json = "*"
log = "0.4"
serde_json = "1.0"
url = { version = "2.1", features = ["serde"]}
