[package]
name = "armour-lang"
version = "0.3.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.13"

[dependencies]
armour-utils = {path = "../armour-utils"}

actix = "0.10"
actix-rt = "1.1"
arrayvec = "0.5"
async-std = "1.6"
base64 = "0.12"
bincode = "1.3"
blake3 = "0.3"
capnp = "0.13"
capnp-rpc = "0.13"
clap = "2.33"
dns-lookup = "1.0"
enum-display-derive = "0.1"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
native-tls = "0.2"
nom = "5.1"
nom5_locate = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
petgraph = { version = "0.5", features = ["serde-1"] }
pretty = { version = "0.10",  features = ["termcolor"] }
pretty_env_logger = "0.4"
regex = "1.3"
rustyline = "6.3"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.8"
tokio = "0.2"
url = "2.1"
