[package]
name = "armour-proxy"
version = "0.3.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
armour-api = { path = "../armour-api" }
armour-lang = { path = "../armour-lang" }
armour-utils = { path = "../armour-utils" }

actix = "0.9"
actix-connect = "1.0"
actix-rt = "1.1"
actix-web = "2.0"
aead = "0.3"
#aes-gcm = "0.6"
#aes-soft = "0.4"
chacha20 = "0.4"
chacha20poly1305 = "0.5"
argon2rs = "0.2"
base64 = "0.12"
bytes = "0.5"
clap = "2.33"
dns-lookup = "1.0"
futures = "0.3"
get_if_addrs = "0.5"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
nix = "0.18"
openssl = { version = "0.10", features = ["vendored"] }
pretty_env_logger = "0.4"
serde_json = "1.0"
tokio = { version = "0.2", features = ["uds", "tcp"] }
tokio-timer = "0.2"
tokio-util = { version = "0.2", features = ["codec"] }
url = "2.1"
