[package]
name = "docker-api"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
chrono = { version = "0.4",  features = ["serde"] }
futures = "0.3"
hyper = "0.13"
hyper-unix-connector = "0.1"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
url = "2.1"