[package]
name = "armour-data-interface"
version = "0.2.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
armour-policy = { path = "../armour-policy" }

actix = "0.9"
bincode = "1.2"
byteorder = "1.3"
bytes = "0.5"
get_if_addrs = "0.5.3"
lazy_static = "1.4"
serde = { version = "1.0",  features = ["derive"] }
tokio-util = "0.2"
