[package]
name = "armour-data-master"
version = "0.1.8"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
armour-policy = { path = "../armour-policy" }
armour-data-interface = { path = "../armour-data-interface" }

actix = "0.8"
clap = "2.33"
futures = "0.1"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.3"
regex = "1.3"
rustyline = "5.0"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
tokio-uds = "0.2"
trust-dns-resolver = "0.12"
url = "2.1"
