[package]
name = "armour-data-master"
version = "0.2.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
armour-policy = { path = "../armour-policy" }
armour-data-interface = { path = "../armour-data-interface" }

actix = "0.9"
actix-rt = "1.0"
clap = "2.33"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.3"
regex = "1.3"
rustyline = "6.0"
tokio = { version = "0.2", features = ["uds","tcp"] }
tokio-util = "0.2"
trust-dns-resolver = { version = "=0.18.0-alpha.2", default-features = false }
url = "2.1"
