[package]
name = "armour-policy"
version = "0.2.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.11"
#[build-dependencies]
#tonic-build = { git = "https://github.com/hyperium/tonic.git" }

[dependencies]
capnp = "0.11"
capnp-rpc = "0.11"
actix = "0.9"
actix-rt = "1.0"
async-std = "1.4"
base64 = "0.11"
bincode = "1.2"
blake2-rfc = "0.2"
clap = "2.33"
dns-lookup = "1.0"
enum-display-derive = "0.1"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
native-tls = "0.2"
nom = "5.1"
nom5_locate = "0.1"
petgraph = { version = "0.5", features = ["serde-1"] }
pretty = { version = "0.6",  features = ["termcolor"] }
pretty_env_logger = "0.3"
regex = "1.3"
rustyline = "6.0"
serde = { version = "1.0",  features = ["derive"] }
serde_regex = "0.4"
tokio = "0.2"
trust-dns-resolver = { version = "=0.18.0-alpha.2", default-features = false }
url = "2.1"
