[package]
name = "actix-capnp"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
capnpc = "0.9.5"

[dependencies]
actix = "0.8"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-signal = "0.2"
tokio-codec = "0.1"
bytes = "0.4"
