[package]
name = "armour-fake-master"
version = "0.1.0"
authors = ["guspet02 <gustavo.petri@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
actix-http = "1.0.0"
actix-web = "1.0"
actix = "0.9"
actix-rt = "1.0.0"
awc = "1.0.1"
clap = "2.33"
serde = "1.0.104"
armour-policy = { path = "../../v1/armour-policy" }
armour-data-interface = { path = "../../v1/armour-data-interface" }
