[package]
name = "ctrl-plane"
version = "0.1.0"
authors = ["guspet02 <gustavo.petri@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
actix-web = "1.0"
listenfd = "0.3"
serde = "1.0.104"
serde_json = "1.0"
# url_serde = "0.2.0"
armour-policy = { path = "../../armour/armour-policy" }
armour-data-interface = { path = "../../armour/armour-data-interface" }
env_logger = "0.7.1"
log = "0.4"
mongodb = "0.9.0"
bson = "0.14.0"


[dependencies.redis]
version = "*"