[package]
name = "ctrl-plane"
version = "0.1.0"
authors = ["guspet02 <gustavo.petri@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
armour-data-interface = { path = "../../v1/armour-data-interface" }
armour-policy = { path = "../../v1/armour-policy" }
bson = "0.14"
env_logger = "0.7"
listenfd = "0.3"
log = "0.4"
mongodb = "0.9"
serde = "1.0"
serde_json = "1.0"
tokio = "0.2"
url = {version = "2.1", features = ["serde"]}

[dependencies.redis]
version = "*"