[package]
name = "logger"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
policy-service = { path = "../policy-service" }
actix = "0.8"
capnp = "0.10"
log = "0.4"
pretty_env_logger = "0.3"
rustyline = "5.0"
