[package]
name = "policy-service"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
capnpc = "0.10"

[dependencies]
actix = "0.8"
capnp = "0.10"
capnp-rpc = "0.10"
futures = "0.1"
log = "0.4"
tokio = "0.1"
tokio-tcp = "0.1"
tokio-uds = "0.2"
