[package]
name = "policy-service"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
capnpc = "0.12"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
async-std = "1.4"
capnp = "0.12"
capnp-rpc = "0.12"
futures = "0.3"
log = "0.4"
tokio = "0.2"
tokio-tcp = "0.1"
tokio-uds = "0.2"
