[package]
name = "arm-service"
version = "0.1.0"
authors = ["Anthony Fox <anthony.fox@arm.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-http = "0.2"
actix-web = {version = "1.0", features = ["client", "ssl"]}
bytes = "0.4"
clap = "2.33"
futures = "0.1"
get_if_addrs = "0.5"
hostname = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
